# angy

./: .gitignore  AGENTGRAPH.md  AGENTICLOOP_OPUS.md  AGENTICLOOP_PHASE1.md  ASKQUESTION.md  BENCHMARK.md  CONVERSATIONAL_AGENT.md  DOCSDOCS.md  EPICPANEL.md  IMPROVEMENTS.md  Implementer-2.json  MULTIORCH.md  PROMPT_IMPROVEMENTS.md  README.md  REFACTOR.md  SCHEDULER_IMPRO.md  STACKDIFF.md  SUP_ORC.md  TESTSUITE.md  index.html  mix-app.js  mix-styles.css  mixprototype.html  package-lock.json  package.json  smoke-test.mjs  tsconfig.json  vite.config.ts
bench/: .gitignore  README.md  package-lock.json  package.json  report.ts  runner.ts  scorer.ts  task.schema.ts  test-compactor.ts  tsconfig.json  types.ts  util.ts
bench/adapters/: agentloop.ts  claudecode.ts
bench/scripts/: integration-test.sh  setup-task-repo.sh
code/: .gitignore  package-lock.json  package.json  tsconfig.json  vitest.config.ts
code/examples/: ollama-gemma4.ts  ollama-generate.ts
code/scripts/: integration-test.sh
coverage/: clover.xml  coverage-final.json  index.html
coverage/composables/: .gitkeep.html  index.html  useCreatePR.ts.html  useEngine.ts.html  useEpicCardActions.ts.html  useEpicFromChat.ts.html  useGitGraph.ts.html  useGraphBuilder.ts.html  useKeyboard.ts.html  useMultiRepoGit.ts.html  (+2 more)
docs/: index.html  styles.css
plans/: FIXREJECT.md
proto/: mixprototype.html
scripts/: test-spawn-concurrency.mjs  verify-chart-deps.sh
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  platform.rs
(+499 files in other folders)
